--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "es6",
+        "target": "es5",
         "noImplicitAny": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
@@ -10,6 +10,7 @@
         "sourceMap": true,
         "stripInternal": true,
         "declaration": true,
+        "newLine": "LF",
         "rootDir": "src",
         "outDir": "bld"
     },
